fix en altura container overflow para form de registro

--- a/src/public/components/registro/registro.component.scss
+++ b/src/public/components/registro/registro.component.scss
@@ -18,13 +18,13 @@
   }
 
   .wrap_overflow {
-	max-height: 100vh;
+		max-height: 90vh;
     overflow: auto;
-	padding: 0;
+		padding: 0;
 	
-	@media all and (min-width: 48em) {
-	  padding: 10vh 0;
-	}
+		@media all and (min-width: 48em) {
+		  padding: 10vh 0;
+		}
   }
 
   .terms-wrapper {
@@ -52,14 +52,14 @@
   	  height: 100%;  
   	  h1 {
   	  	font-size: 2.7rem;
-	  }		  
+	  	}		  
   	  p {
   	  	font-size: 1.5rem;
   	  }  	  
   	  button {
   	  	margin: 0px auto;
   	  	width:50%;
-	  }		  
+	  	}		  
   	  @media all and (min-width: 48em) {
   	  	h1 {
   	  	  font-size: 3.5rem;
